infra/k8s/event-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:  
      labels:      
        app: event
    spec:
      containers:
        - name: event
          image: abhi149209/event

---

apiVersion: v1          
kind: Service 
metadata: 
  name: event-srv
spec:
  selector:
    app: event
  ports: 
    - name: event  
      protocol: TCP
      port: 4002
      targetPort: 4002
