infra/k8s/events-srv.yaml
apiVersion: v1 
kind: Service 
metadata:  
  name: event-srv
spec:
  type: NodePort
  selector:
    app: event  
  ports:
    - name: event
      protocol: TCP
      port: 4002
      targetPort: 4002
